--- a/index.html
+++ b/index.html
@@ -95,16 +95,91 @@
             </div>
           </div>
         </div>
-
       </div>
-
-
     </header>
 
+    <!-- Seccion-->
+
+    <section id="info">
+        <div class="container mt-5">
+          <p class="mb-3">titulo</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </section>
+
+        <!-- CATAOGO-->
+    <section id="catalogo">
+      <div class="container">
+      <div class="masVitas mb-4">
+        <h4>Mas vistas</h4>
+        <div class="row alingn-item-start">
+          <div class="col-md-3">
+            <div class="header-content-p">
+              <img src="img/fondo.jpg" style="width: 100%;">
+              <h5 class="mt-2">nombre de pelicula</h5>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="header-content-s">
+              <img src="img/fondo.jpg" style="width: 100%;">
+              <h5 class="mt-2">nombre de pelicula</h5>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="header-content-t">
+              <img src="img/fondo.jpg" style="width: 100%;">
+              <h5 class="mt-2">nombre de pelicula</h5>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="header-content-c">
+              <img src="img/fondo.jpg" style="width: 100%;">
+              <h5 class="mt-2">nombre de pelicula</h5>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
+            </div>
+          </div>
+        </div>
+
+        </div>
+        <h4>Galardonadas</h4>
+
+        <div class="row alingn-item-start">
+          <div class="col-md-3">
+            <div class="header-content-p">
+              <img src="img/fondo.jpg" style="width: 100%;">
+              <h5 class="mt-2">nombre de pelicula</h5>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="header-content-s">
+              <img src="img/fondo.jpg" style="width: 100%;">
+              <h5 class="mt-2">nombre de pelicula</h5>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="header-content-t">
+              <img src="img/fondo.jpg" style="width: 100%;">
+              <h5 class="mt-2">nombre de pelicula</h5>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="header-content-c">
+              <img src="img/fondo.jpg" style="width: 100%;">
+              <h5 class="mt-2">nombre de pelicula</h5>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
+            </div>
+          </div>
+        </div>
 
 
-
-
+      </div>
+    </section>
 
 
     <!-- BOOTATRAP 4 script (para que mi sitio web se adapte a diferentes tipos de pantalla)-->
