Implementacion de scrollreveal

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
     <!-- BOOTATRAP CSS (instalar btrap para usarlo)-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- SCROLL REVEAL-->
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+
     <!--CUSTOM CSS-->
     <link rel="stylesheet" href="css/main.css">
-    <!-- SCROLL REVEAL-->
-    <script src="https://unpkg.com/scrollreveal"></script>
 
   </head>
   <body>
     <!--NAVEGACION-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Logintech</a>
+        <a class="navbar-brand" href="#">Pelis.net</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,35 +64,41 @@
     </nav>
 
     <!-- CABECERA-->
+    <section id="contact">
+      <div class="row mt-5">
+        <img src="img/12.jpg" style="width: 100%;">
+
+        </div>
+    </section>
 
     <header id="header">
-      <div class="container mt-4">
+      <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <div class="header-content-p">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+            <div class="header-content">
+              <img src="img/1.jpg" style="width: 100%;">
+              <h5 class="mt-2">Alien</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="header-content-s">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+            <div class="header-content">
+              <img src="img/2.jpg" style="width: 100%;">
+              <h5 class="mt-2">El cisne negro</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="header-content-t">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/3.jpg" style="width: 100%;">
+              <h5 class="mt-2">Iron man</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="header-content-c">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/4.jpg" style="width: 100%;">
+              <h5 class="mt-2">Moonlight</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
@@ -101,8 +109,8 @@
     <!-- Seccion-->
 
     <section id="info">
-        <div class="container mt-5">
-          <p class="mb-3">titulo</p>
+        <div class="container my-5 ">
+          <p class="mb-3 h4" >Sobre Nosotros</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </section>
@@ -111,67 +119,67 @@
     <section id="catalogo">
       <div class="container">
       <div class="masVitas mb-4">
-        <h4>Mas vistas</h4>
+        <h4 class="mb-3">Mas vistas</h4>
         <div class="row alingn-item-start">
           <div class="col-md-3">
             <div class="header-content-p">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/5.jpg" style="width: 100%;">
+              <h5 class="mt-2">Avatar</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="header-content-s">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/6.jpg" style="width: 100%;">
+              <h5 class="mt-2">21 jump street</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="header-content-t">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/7.jpg" style="width: 100%;">
+              <h5 class="mt-2">Vampire hunter</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="header-content-c">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/8.jpg" style="width: 100%;">
+              <h5 class="mt-2">The dark nigth rises</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
         </div>
 
         </div>
-        <h4>Galardonadas</h4>
+        <h4 class="mb-3">Galardonadas</h4>
 
         <div class="row alingn-item-start">
           <div class="col-md-3">
             <div class="header-content-p">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/8.jpg" style="width: 100%;">
+              <h5 class="mt-2">The dark nigth rises</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="header-content-s">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/9.jpg" style="width: 100%;">
+              <h5 class="mt-2">Buscando a Nemo</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="header-content-t">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/10.jpg" style="width: 100%;">
+              <h5 class="mt-2">La princesa y el sapo</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="header-content-c">
-              <img src="img/fondo.jpg" style="width: 100%;">
-              <h5 class="mt-2">nombre de pelicula</h5>
+              <img src="img/11.jpg" style="width: 100%;" >
+              <h5 class="mt-2">Wall-e</h5>
               <a href="#" class="btn btn-outline-primary btn-sm">Ver mas</a>
             </div>
           </div>
@@ -181,11 +189,34 @@
       </div>
     </section>
 
+    <footer >
+      <div class="row mt-5">
+        <img src="img/12.jpg" style="width: 100%;" style="ha">
+
+        </div>
+    </footer>
+
+
+
 
     <!-- BOOTATRAP 4 script (para que mi sitio web se adapte a diferentes tipos de pantalla)-->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+   <!--script-->
+   <script>
+   window.sr = new ScrollReveal();
+
+
+    sr.reveal('.navbar', { delay: 500 });
+    sr.reveal('.header',{ delay: 500 });
+
+
+
+   </script>
+
   </body>
+
 </html>
